TODO/coturn/coturn-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coturn-svc
spec:
  selector:
    app: coturn
  ports:
  - name: web
    port: 3478

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coturn
spec:
  rules:
  - host: turn.mykube.awesome
    http:
      paths:
      - path: /
        backend:
          serviceName: coturn-svc
          servicePort: 443
